test/ui/test/lowering/multiple-module-headers.lushui
;;; TEST fail check

module

module

module sub of

module

